# wasi-libc-old

./: CMakeLists.txt
basics/include/sys/: types.h
cmake/Modules/Platform/: wasi.cmake
